cmake_minimum_required(VERSION 2.8)
project(my)

add_library(thelib SHARED virt.cxx)

find_package(SWIG REQUIRED)
include(${SWIG_USE_FILE})
include(FindPHP5.cmake)
include_directories(${PHP5_INCLUDE_PATH})
set_source_files_properties(demo.i PROPERTIES CPLUSPLUS ON)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
swig_add_module(php_demo php demo.i)
swig_link_libraries(php_demo thelib)
set_property(TARGET ${SWIG_MODULE_php_demo_REAL_NAME} PROPERTY NO_SONAME 1)
set_target_properties(${SWIG_MODULE_php_demo_REAL_NAME} PROPERTIES LINK_INTERFACE_LIBRARIES "")
set_target_properties(${SWIG_MODULE_php_demo_REAL_NAME} PROPERTIES PREFIX "")
if(UNIX)
  set_target_properties(${SWIG_MODULE_php_demo_REAL_NAME} PROPERTIES OUTPUT_NAME "demo")
endif()
